make sure the mobile menu works on IE and FF:D

--- a/assets/sass/atoms/_logo-retraitespopulaires.scss
+++ b/assets/sass/atoms/_logo-retraitespopulaires.scss
@@ -31,6 +31,10 @@
       }
     }
   }
+
+  @media screen and (max-width: $screen-sm-max) {
+    max-height: 100px;
+  }
 }
 
 .logo-retraitespopulaires-lg {
